# CrabKnife

./: AGENTS.md  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: build-macos.yml  deploy.yml
macos/: Info.plist
scripts/: bundle-macos.sh
src/: app.rs  main.rs  settings.rs  ui.rs
src/tools/: base64.rs  float.rs  hash.rs  hex.rs  mod.rs  password.rs  qr.rs  radix.rs  regex.rs
