[package]
name = "crab-knife"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
encoding_rs = "0.8.35"
regex = "1"
toml_edit = "0.25.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fontdb = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }
