[package]
name = "crab-knife"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
blake3 = "1.8.5"
crc32fast = "1.5.0"
eframe = "0.34.1"
encoding_rs = "0.8.35"
md-5 = "0.10.6"
regex = "1"
rfd = "0.15.4"
sha1 = "0.10.6"
sha2 = "0.10.9"
toml_edit = "0.25.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fontdb = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Storage"] }
