[package]
name = "crab-knife"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
crc32fast = "1.5.0"
eframe = "0.34.1"
encoding_rs = "0.8.35"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
md-5 = "0.10.6"
qrcode = "0.14.1"
regex = "1"
rfd = { version = "0.15.4", features = ["file-handle-inner"] }
sha1 = { version = "0.10.6", features = ["asm"] }
sha2 = { version = "0.10.9", features = ["asm"] }
toml_edit = "0.25.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blake3 = { version = "1.8.5", features = ["rayon"] }
fontdb = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
blake3 = "1.8.5"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "Document", "File", "HtmlCanvasElement", "Storage", "Window"] }

[profile.dev.package.sha1]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.md-5]
opt-level = 3
